<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn_screen"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/signIn_logo"
        android:layout_width="207dp"
        android:layout_height="134dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/signInLogo"
            android:layout_width="213dp"
            android:layout_height="87dp"
            app:srcCompat="@drawable/logo_app" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:text="WorldCinema"
            android:textColor="@color/main_color"
            android:textSize="33dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signIn_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_logo">

        <EditText
            android:id="@+id/signIn_email"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="@string/signIn_email"
            android:paddingHorizontal="16dp"
            android:paddingVertical="13dp"
            android:textColorHint="@color/hiden_text" />

        <EditText
            android:id="@+id/signIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_text"
            android:hint="@string/signIn_password"
            android:paddingHorizontal="16dp"
            android:paddingVertical="13dp"
            android:textColorHint="@color/hiden_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signIn_button"
        android:layout_width="349dp"
        android:layout_height="165dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/signIn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            android:paddingVertical="13dp"
            android:text="@string/signIn_login"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <!--            android:backgroundTint="@color/free_background"-->

        <Button
            android:id="@+id/signIn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:paddingVertical="13dp"
            android:text="@string/signIn_register"
            android:textColor="@color/main_color"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>